# overcast

./: .air.toml  .dockerignore  .gitattributes  .gitignore  .golangci.yml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPILOT_HANDOFF.md  Dockerfile  LICENSE  Makefile  README.md  RELEASE.md  STATUS.md  Taskfile.yml  capgen  docker-compose.dev.yml  docker-compose.yml  embed.go  embed_slim.go  go.mod  go.sum  stub-report
.claude/: settings.local.json
.devcontainer/: Dockerfile  devcontainer.json  init-worktree.ps1  init-worktree.sh
.docker/: .token_seed
.github/: CODEOWNERS  todo-languages.json
compat/: AGENTS.md  Makefile  PROTOCOL.md  README.md  dev.sh  docker-compose.yml  embed.go  mcp.go  orchestrator.go  package-lock.json  result.go  run.sh  runner.go  runner_test.go  server.go  sweep.go
compat/suites/rust-sdk/: .dockerignore  AGENTS.md  BUILD_NOTES.md  Cargo.toml  Dockerfile  README.md  image-tag.sh  run.sh
compat/suites/rust-sdk/src/: clients.rs  harness.rs  main.rs  registry.rs
compat/suites/rust-sdk/src/groups/: dynamodb.rs  kms.rs  lambda.rs  mod.rs  s3.rs  secretsmanager.rs  sns.rs  sqs.rs  ssm.rs  sts.rs
docker/: awslocal  entrypoint-slim.sh  entrypoint.sh
docs/: README.md  cdk.md  debugging.md  development-setup.md  migration-from-localstack.md  operation-manifest.md  pagination-plan.md  performance.md  sdk-cli.md  smithy.md  storage-access-plan.md  storage-backends.md  storage-plan.md  storage-test-plan.md
hot-reload-deleted-layer-recovery-3942201472/: index.js
scripts/: bench-startup.go  check-binary-symbols.sh  run.go  (+10 more)
(+1736 files in other folders)
