[package]
name = "rust-sdk-compat"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "=1.5.10"
aws-credential-types = "=1.2.1"
aws-sdk-dynamodb = "=1.56.0"
aws-sdk-kms = "=1.52.0"
aws-sdk-lambda = "=1.55.0"
aws-sdk-s3 = "=1.65.0"
aws-sdk-secretsmanager = "=1.52.0"
aws-sdk-sns = "=1.52.0"
aws-sdk-sqs = "=1.51.0"
aws-sdk-ssm = "=1.52.0"
aws-sdk-sts = "=1.51.0"
aws-smithy-types = "=1.2.13"
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "fs", "io-util", "io-std"] }
flate2 = "1"
